# vkEarth

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  vkEarth.cpp
src/cpp/: create_pipeline.cpp  create_pipeline.hpp  demo_scene.cpp  demo_scene.hpp  error_checking.cpp  error_checking.hpp  glsl2spv.cpp  glsl2spv.hpp  main.cpp  vk_earth.cpp
src/cpp/cdlod/: cdlod_quad_tree.cpp  cdlod_quad_tree.hpp  cdlod_quad_tree_node.cpp  cdlod_quad_tree_node.hpp  grid_mesh.cpp  grid_mesh.hpp  quad_grid_mesh.cpp  quad_grid_mesh.hpp  texture_handler.cpp  texture_handler.hpp  texture_info.hpp
src/cpp/collision/: bounding_box.hpp  cube2sphere.cpp  cube2sphere.hpp  frustum.hpp  plane.hpp  sphere.cpp  sphere.hpp  spherized_aabb.cpp  spherized_aabb.hpp
src/cpp/common/: debug_callback.cpp  debug_callback.hpp  defines.hpp  error_checking.cpp  error_checking.hpp  file_utils.hpp  glm.hpp  settings.hpp  thread_pool.hpp  vulkan_application.hpp  vulkan_memory.hpp
src/cpp/engine/: behaviour.cpp  behaviour.hpp  camera.cpp  camera.hpp  game_engine.cpp  game_engine.hpp  game_object-inl.hpp  game_object.cpp  game_object.hpp  scene.cpp  scene.hpp  scene_vulkan.cpp  timer.cpp  timer.hpp  transform.hpp  vulkan_scene.cpp  vulkan_scene.hpp
src/cpp/initialize/: create_debug_callback.cpp  create_device.cpp  create_device.hpp  create_instance.cpp  create_instance.hpp  create_physical_device.cpp  create_physical_device.hpp  create_pipeline.cpp  create_pipeline.hpp  debug_callback.cpp  debug_callback.hpp  prepare_swapchain.cpp  prepare_swapchain.hpp  validation_layer_checker.cpp  validation_layer_checker.hpp
src/cpp/shader/: glsl2spv.cpp  glsl2spv.hpp
src/glsl/: simple.frag  simple.vert
